--- a/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
+++ b/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
@@ -16,13 +16,14 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        @Html.HiddenFor(model => model.RoundId)
-
+        @Html.HiddenFor(model => model.CourseDetail.CourseId)
         @Html.HiddenFor(model => model.CourseId)
+
 
         <div class="form-group">
             <h2>
                 @Html.DisplayFor(model => model.CourseDetail.Name, new { htmlAttributes = new { @class = "control-label col-md-2" } })
+                @Html.HiddenFor(model => model.CourseDetail.Name)
             </h2>
         </div>
 
@@ -35,6 +36,7 @@
                 {
                     <td>
                         @Html.DisplayFor(model => Model.CourseDetail.Holes[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => model.CourseDetail.Holes[i].HoleNumber)
                     </td>
                 }
             </tr>
@@ -46,6 +48,7 @@
                 {
                     <td>
                         @Html.DisplayFor(model => Model.CourseDetail.Holes[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => model.CourseDetail.Holes[i].Par)
                     </td>
                 }
             </tr>
@@ -57,6 +60,7 @@
                 {
                     <td>
                         @Html.DisplayFor(model => Model.CourseDetail.Holes[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => model.CourseDetail.Holes[i].Distance)
                     </td>
                 }
             </tr>
@@ -267,7 +271,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create Round" class="btn btn-default" />
             </div>
         </div>
     </div>
