--- a/ForeScore.WebMVC/Views/Round/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Edit.cshtml
@@ -72,7 +72,7 @@
                     <td>
                         @Html.TextBoxFor(model => Model.HoleData[i].Score, new { htmlAttributes = new { @class = "form-control", } })
                         @Html.HiddenFor(model => Model.HoleData[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.HiddenFor(model => Model.HoleData[i].HoleDataId, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => Model.HoleData[i].HoleDataId)
                     </td>
 
                 }
