--- a/ForeScore.WebMVC/Views/Follow/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Index.cshtml
@@ -6,10 +6,10 @@
 
 <h2>Index</h2>
 
-<div class="text-center">
+<div class="container text-center">
     <div class="row">
-        <div class="col-xs-3"></div>
-        <div class="col-xs-6">
+
+        <div class="col-lg-6">
             <div class="panel panel-default">
                 <div class="panel-heading">Users You Are Following</div>
                 <div class="panel-body">
@@ -23,25 +23,22 @@
                         <tbody>
                             @for (int i = 0; i < Model.Following.Count; i++)
                             {
-                            <tr>
-                                <td>@Html.DisplayFor(model => model.Following[i].FullName)</td>
-                                <td>@Html.DisplayFor(model => model.Following[i].Email)</td>
-                                <td>@Html.HiddenFor(model => model.Following[i].UserId)</td>
-                                <td>@Html.ActionLink("Delete", "Delete", new { id = Model.Following[i].FollowingId }) |</td>
-                                <td>@Html.ActionLink("View Profile", "ProfileView", new { id = Model.Following[i].UserId })</td>
-                            </tr>
+                                <tr>
+                                    <td>@Html.DisplayFor(model => model.Following[i].FullName)</td>
+                                    <td>@Html.DisplayFor(model => model.Following[i].Email)</td>
+                                    <td>@Html.HiddenFor(model => model.Following[i].UserId)</td>
+                                    <td>@Html.ActionLink("Delete", "Delete", new { id = Model.Following[i].FollowingId }) |</td>
+                                    <td>@Html.ActionLink("View Profile", "ProfileView", new { id = Model.Following[i].UserId })</td>
+                                </tr>
                             }
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
-        <div class="col-xs-3"></div>
-    </div>
 
-    <div class="row">
-        <div class="col-xs-3"></div>
-        <div class="col-xs-6">
+
+        <div class="col-lg-6">
             <div class="panel panel-default">
                 <div class="panel-heading">Your Followers</div>
                 <div class="panel-body">
@@ -60,7 +57,7 @@
                                     <td>@Html.DisplayFor(model => model.Followers[i].Email)</td>
                                     <td>@Html.HiddenFor(model => model.Followers[i].UserId)</td>
                                     <td>
-                                        @Html.ActionLink("View Profile", "ProfileView", new { id =  Model.Followers[i].UserId }) |
+                                        @Html.ActionLink("View Profile", "ProfileView", new { id = Model.Followers[i].UserId }) |
                                     </td>
                                 </tr>
                             }
@@ -69,12 +66,14 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-3"></div>
     </div>
+
+
     <div class="panel-footer">
         <a href="/Follow/Create" class="btn btn-primary btn-block">
             Create New Follow
         </a>
     </div>
+
 </div>
 
