--- a/ForeScore.WebMVC/Views/Post/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Index.cshtml
@@ -4,6 +4,10 @@
 }
 
 <h2>Index</h2>
+
+<p>
+    @Html.ActionLink("Create New", "SelectRound")
+</p>
 <div class="container">
     <div class="row">
 
