--- a/ForeScore.WebMVC/Views/Post/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Edit.cshtml
@@ -1,11 +1,10 @@
-﻿@model ForeScore.Models.PostModels.PostCreate
+﻿@model ForeScore.Models.PostModels.PostEdit
 
 @{
-    ViewBag.Title = "CreatePost";
+    ViewBag.Title = "Edit";
 }
 
-<h2>CreatePost</h2>
-
+<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
@@ -16,6 +15,8 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     @Html.HiddenFor(model => model.RoundId)
+
+    @Html.HiddenFor(model => model.PostId)
 
     <div class="form-group">
         @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -167,13 +168,16 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
 
 }
 
-
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
