--- a/ForeScore.WebMVC/Views/UserCareer/Index.cshtml
+++ b/ForeScore.WebMVC/Views/UserCareer/Index.cshtml
@@ -21,9 +21,18 @@
             @Html.DisplayNameFor(model => model.Handicap)
         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Handicap)
-        </dd>
+        @if (Model.Handicap == 0)
+        {
+            <dd>
+                Not enough rounds logged to calculate an accurate handicap.
+            </dd>
+        }
+        else
+        {
+            <dd>
+                @Html.DisplayFor(model => model.Handicap)
+            </dd>
+        }
 
         <dt>
             @Html.DisplayNameFor(model => model.Aces)
@@ -71,6 +80,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.AveragePutts)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FairwaysHit)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FairwaysHit)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Penalties)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Penalties)
         </dd>
 
         <dt>
